section 1 classes changed

--- a/index.html
+++ b/index.html
@@ -8,43 +8,43 @@
     <title>Document</title>
 </head>
 <body>
-   <section class="mobile-section1">
-       <img src="images/logo.png" alt="" class="header-img">
+   <section class="mobile__section1 desktop__section1">
+       <img src="images/logo.png" alt="" class="mobile__section1__header__img desktop__section1__header__img">
        <input type="checkbox" id="toggle1">
-       <label class="hamburger1" for="toggle1">
+       <label class="mobile__section1__hamburger" for="toggle1">
         <div class="top"></div>
         <div class="meat"></div>
         <div class="bottom"></div>
       </label>
-      <img src="images/Search Icon.png" alt="" class="s-icon">
-       <nav class="mobile-navbar">
-        <div class="mobile-nav1">
-        <div class="hospital-img">
-        <img src="images/logo.png" alt="" class="media-img">
+      <img src="images/Search Icon.png" alt="" class="mobile__section1__search__icon">
+       <nav class="mobile__navbar desktop__navbar">
+        <div class="mobile__navbar__blue desktop__navbar__blue">
+        <div class="desktop__navbar__blue__hospital__img">
+        <img src="images/logo.png" alt="" class="media__img">
         </div>
         <a href="#">PATIENT <br> CARE</a>
         <a href="#" id="programs">PROGRAMS <br>&  SERVICES</a>
-        <a href="" class="media-txt">VISITING <br> US</a>
-        <a href="#" class="nav1-lastchild">ABOUT <br> US</a>
+        <a href="" class="media__txt">VISITING <br> US</a>
+        <a href="#" class="mobile__navbar__blue__lastchild desktop__navbar__blue__lastchild">ABOUT <br> US</a>
     </div>
-    <div class="mobile-nav2">
-        <div class="mobile-nav2-row1">
+    <div class="mobile__navbar__white desktop__navbar__white">
+        <div class="mobile__navbar__white--row1 desktop__navbar__white--row1">
         <a href="#" >CAREERS</a>
         <a href="#" >CONTACT</a>
         <a href="#" >DONATE</a>
     </div>
-    <div class="mobile-nav2-row2">
+    <div class="mobile__navbar__white--row2">
         <a href="#" >FOR MEDICAL PROFESSIONALS</a>
-        <a href="#" class="media-research">RESEARCH</a>
+        <a href="#" class="media__research">RESEARCH</a>
         <button >MyChart</button>
     </div>
     <div class="boxsearch">
-        <input type="text" placeholder="Search" class="input"> 
-        <a href="#"><img src="images/Search Icon.png" alt="Search Icon" class="s-icon"></a>
+        <input type="text" placeholder="Search" class="boxsearch__input"> 
+        <a href="#"><img src="images/Search Icon.png" alt="Search Icon" class="desktop__search__icon"></a>
     </div>
     <div class="language">
-        <img class="language-flag" src="images/flag.png" alt="Flag">
-        <p class="language-text">English</p>
+        <img class="language__flag" src="images/flag.png" alt="Flag">
+        <p class="language__text">English</p>
     </div>
     </div>
        </nav>
